adding title slide style and hover article style

--- a/index.html
+++ b/index.html
@@ -54,35 +54,41 @@
 		<div class="container">
 			<div class="row" id="news">
 				<div class ="col-md-4">
-					<div class="thumbnail">
-						<img src="https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/news-articles/a-runners-destiny/_jcr_content/featuredImage/renditions/rendition1.img.jpg" alt="...">
+					<a href="#" class="thumbnail">
+						<div class="articleImg">
+							<img src="https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/news-articles/a-runners-destiny/_jcr_content/featuredImage/renditions/rendition1.img.jpg" alt="...">
+						</div>
 						<div class="caption">
 							<span class="date">16/10/2016</span>
 							<h3 class="title">title</h3>
 						</div>
-					</div>
+					</a>
 				</div>
 
 				<div class ="col-md-4">
-					<div class="thumbnail">
+					<a href="#" class="thumbnail">
+					<div class="articleImg">
 						<img src="https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/news-articles/a-runners-destiny/_jcr_content/featuredImage/renditions/rendition1.img.jpg" alt="...">
+					</div>
 						<div class="caption">
 							<span class="date">16/10/2016</span>
 							<h3 class="title">title</h3>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class ="col-md-4">
-					<div class="thumbnail">
+					<a href="#" class="thumbnail">
+					<div class="articleImg">
 						<img src="https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/news-articles/a-runners-destiny/_jcr_content/featuredImage/renditions/rendition1.img.jpg" alt="...">
+					</div>
 						<div class="caption">
 							<span class="date">16/10/2016</span>
 							<h3 class="title">title</h3>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
-			<div class="row" id='slider'>
+			<div id='slider'>
 				<span class='glyphicon glyphicon-chevron-left'></span>
 				<div id='slideContainer'><div id='slideContain'>
 					<div class='slide'>
