--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="/assets/js/slider.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse-1" aria-expanded="false">
@@ -51,6 +51,7 @@
 				</div>
 			</div>
 		</nav>
+		<div id="fakeNav"></div>
 		<div class="container">
 			<div class="row" id="news">
 				<div class ="col-md-4">
