--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">
+					<a class="navbar-brand" href="index.html">
 						<img alt="logo" width="50px" src="/assets/img/logo.png">
 					</a>
 				</div>
@@ -57,7 +57,7 @@
 			<div class ="col-md-10 col-md-offset-1 newsContainer">
 				<img src="https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/news-articles/a-runners-destiny/_jcr_content/featuredImage/renditions/rendition1.img.jpg" alt="news">
 				<div class="caption">
-					<span class="date">16/10/2016</span>
+					<span class="date">20/04/2016</span>
 					<h3 class="title">title</h3>
 					<div class="content">
 						<p>
