--- a/index.html
+++ b/index.html
@@ -65,36 +65,36 @@
 			<h2 id="news">Les news</h2>
 			<div class="row" id="news">
 				<div class ="col-md-4">
-					<a href="news.html" class="thumbnail">
+					<a href="news3.html" class="thumbnail">
 						<div class="articleImg">
-							<img src="assets/img/news.jpg" alt="news">
+							<img src="assets/img/salle_ascenseur.jpg" alt="news">
 						</div>
 						<div class="caption">
-							<span class="date">20/04/2017</span>
-							<h3 class="title">title</h3>
+							<span class="date">15/06/2017</span>
+							<h3 class="title">T.H.I.S. disponible en téléchargement</h3>
 						</div>
 					</a>
 				</div>
 
 				<div class ="col-md-4">
-					<a href="news.html" class="thumbnail">
+					<a href="news2.html" class="thumbnail">
 					<div class="articleImg">
-						<img src="assets/img/news.jpg" alt="news">
+						<img src="assets/img/salle_bureau.jpg" alt="news">
 					</div>
 						<div class="caption">
-							<span class="date">20/04/2017</span>
-							<h3 class="title">title</h3>
+							<span class="date">10/06/2017</span>
+							<h3 class="title">Annonce de la sortie</h3>
 						</div>
 					</a>
 				</div>
 				<div class ="col-md-4">
-					<a href="news.html" class="thumbnail">
+					<a href="news1.html" class="thumbnail">
 					<div class="articleImg">
-						<img src="assets/img/news.jpg" alt="news">
+						<img src="assets/img/news1.jpg" alt="news">
 					</div>
 						<div class="caption">
-							<span class="date">20/04/2017</span>
-							<h3 class="title">title</h3>
+							<span class="date">02/05/2017</span>
+							<h3 class="title">Ouverture du site</h3>
 						</div>
 					</a>
 				</div>
@@ -103,12 +103,12 @@
 			<div id='slider'>
 				<span class='glyphicon glyphicon-chevron-left'></span>
 				<div id='slideContainer'><div id='slideContain'>
-					<div class='slide'>
-						<h4>Slide 1</h4>
-					</div><div class='slide'>
-						<h4>Slide 2</h4>
-					</div><div class='slide'>
-						<h4>Slide 3</h4>
+					<div class='slide' style="background-image: url('/assets/img/salle_repos.jpg');">
+						<h4>Salle de repos</h4>
+					</div><div class='slide' style="background-image: url('/assets/img/salle_réunion.jpg');">
+						<h4>Salle de réunion</h4>
+					</div><div class='slide' style="background-image: url('/assets/img/terminal.jpg');">
+						<h4>Un terminal</h4>
 					</div>
 				</div></div>
 				<span class='glyphicon glyphicon-chevron-right'></span>
@@ -122,8 +122,8 @@
 						<img src="/assets/img/doc.svg" alt="report">
 						<div class="caption">
 							<ul>
-								<li><a href="#">Télecharger le jeu </a> (SOON)</li>
-								<li><a href="#">Manuel d'utilisation</a> (SOON)</li>
+								<li><a href="/dl/THIS Setup.exe">Télecharger le jeu </a></li>
+								<li><a href="/dl/man.pdf">Manuel d'exploitation</a></li>
 							</ul>
 						</div>
 					</div>
@@ -136,8 +136,7 @@
 								<li><a href="/dl/cahier.pdf">Cahier des charges</a></li>
 								<li><a href="/dl/rapport1.pdf">Rapport de soutenance 1</a></li>
 								<li><a href="/dl/rapport2.pdf">Rapport de soutenance 2</a></li>
-								<li><a href="#">Rapport de soutenance 3</a> (SOON)</li>
-								<li><a href="#">Rapport de soutenance 4</a> (SOON)</li>
+								<li><a href="/dl/rapport.pdf">Rapport de projet</a></li>
 							</ul>
 						</div>
 					</div>
