--- a/news2.html
+++ b/news2.html
@@ -55,30 +55,21 @@
 		<div id="fakeNav"></div>
 		<div class="container">
 			<div class ="col-md-10 col-md-offset-1 newsContainer">
-				<img src="https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/news-articles/a-runners-destiny/_jcr_content/featuredImage/renditions/rendition1.img.jpg" alt="news">
 				<div class="caption">
-					<span class="date">20/04/2016</span>
-					<h3 class="title">title</h3>
+					<span class="date">10/06/2017</span>
+					<h3 class="title">Annonce de la sortie</h3>
 					<div class="content">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Bonjour à tous,
 						</p>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, iusto, facere dolores necessitatibus temporibus possimus quo porro tenetur veniam dolorum sapiente, cumque odio vero minima. Suscipit blanditiis fuga est voluptate.
+							Notre groupe This is a team se prépare pour les dernières finitons du jeu T.H.I.S. . Nous vous laisserons télécharger le jeu le Jeudi 15 Juin 2017. 
 						</p>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam sapiente enim esse. Corporis saepe, vitae. Recusandae, quae beatae expedita sequi eos neque assumenda magnam vitae deleniti, sit sed ipsam a.
+							Nous vous avons préparer de nombreuses améliorations tel que l'apparation d'un opérateur qui fera office de narrateur dans votre aventure et vous guidera dans celle-ci. Suivez bien les instruction de cet opérateur.
 						</p>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque impedit dignissimos obcaecati iste sed corporis, necessitatibus recusandae, dolorem animi! Libero dignissimos doloremque, numquam maxime aspernatur possimus repudiandae nemo tempora maiores.
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus placeat id enim repellat est sit nesciunt recusandae quis ab! Voluptatibus optio, sint quidem molestias sunt eaque. Tempora repellat laudantium aut!
+							Nous vous annonçons également l'arriver d'un manuel d'exploitation composé d'un manuel d'utilisation et d'un manuel d'installation. N'hésiter pas à le consulter une fois le jeu sortis ! 
 						</p>
 						<span class="authorContainer">by <span class="author">Mr_Freezeex</span></span>
 					</div>
