fixed the Klervi malus point orthographe on website

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 							<h3>Arthur<br>Outhenin-Chalandre</h3>
 							<h4>aka Mr_Freezeeex</h4>
 							<a href="mailto:arthur.outhenin-chalandre@epita.fr"><img src="/assets/img/mail.svg" alt="contact"></a><a href="https://twitter.com/Mr_Freezeex"><img src="/assets/img/twitter.svg" alt="contact"></a>
-							<span class="desc">Hello, moi c'est Arthur, c'est moi qui ai réalisé le site sur lequel tu te trouves. Je m'occupe également de l'interface utilisateur et du réseau sur le jeu. Ayant de précédentes experiences dans la programmation, j'aide mes camarades s'ils ont des problèmes dans la conception du jeu. Le projet est aussi pour moi l'occasion d'en apprendre plus sur le développement en C# et sur Unity en général.</span>
+							<span class="desc">Hello, moi c'est Arthur, c'est moi qui ai réalisé le site sur lequel tu te trouves. Je m'occupe également de l'interface utilisateur et du réseau sur le jeu. Ayant de précédentes expériences dans la programmation, j'aide mes camarades s'ils ont des problèmes dans la conception du jeu. Le projet est aussi pour moi l'occasion d'en apprendre plus sur le développement en C# et sur Unity en général.</span>
 						</div>
 					</div>
 				</div>
@@ -162,7 +162,7 @@
 							<h3>Raphael<br>Heimann</h3>
 							<h4>aka Raphis</h4>
 							<a href="mailto:raphi.heimann@orange.fr"><img src="/assets/img/mail.svg" alt="contact"></a><a href="https://twitter.com/Nekorawa"><img src="/assets/img/twitter.svg" alt="contact"></a>
-							<span class="desc">Bonjour, je suis Raphaël. Je suis le level designer et le responsable de l’IA pour ce jeu. Donc, c’est moi qui réalise les maps, la détection, les différents patterns du jeu de fin de niveau, etc. N’ayant pas beaucoup d’expérience dans l’utilisation de unity et dans la programmation, ce projet me permet de m’améliorer et de découvrir de nouveau monde.</span>
+							<span class="desc">Bonjour, je suis Raphaël. Je suis le level designer et le responsable de l’IA pour ce jeu. Donc, c’est moi qui réalise les cartes, la détection, les différents patterns du jeu de fin de niveau, etc. N’ayant pas beaucoup d’expérience dans l’utilisation de Unity et dans la programmation, ce projet me permet de m’améliorer et de découvrir de nouveau monde.</span>
 						</div>
 					</div>
 				</div>
@@ -173,7 +173,7 @@
 							<h3>Pierre-Emanuel<br>Patry</h3>
 							<h4>aka Und</h4>
 							<a href="mailto:und@linux.com"><img src="/assets/img/mail.svg" alt="contact"></a>
-							<span class="desc">Salut, je suis Pierre-Emmanuel, je fait partie des developpeurs de ce projet mais je participe également à la création des différentes ressources du jeu comme ses modèles 3D, ses animations ou encore sa bande son. J'assiste également mes associés dans leurs taches comme pour l'IA par exemple. J'avais déja des notions de programmation mais ce projet me permettra d'améliorer mes compétences en C#.</span>
+							<span class="desc">Salut, je suis Pierre-Emmanuel, je fais partie des développeurs de ce projet, mais je participe également à la création des différentes ressources du jeu comme ses modèles 3D, ses animations ou encore sa bande son. J'assiste également mes associés dans leurs tâches comme pour l'IA par exemple. J'avais déjà des notions de programmation, mais ce projet me permettra d'améliorer mes compétences en C#.</span>
 						</div>
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 							<h3>Guillaume<br>Trem</h3>
 							<h4>aka Dyzing</h4>
 							<a href="mailto:guillaume.trem@outlook.fr"><img src="/assets/img/mail.svg" alt="contact"></a><a href="https://twitter.com/Dyzing"><img src="/assets/img/twitter.svg" alt="contact"></a>
-							<span class="desc">Salut je suis Guillaume. Je m’occupe de la réalisation du Gameplay dans le projet. Avec le groupe je réalise les mouvements, le hacking etc. Je n’avais  aucune expérience dans Unity et dans le C# avant cette année, ce projet me permet de découvrir une nouvelle dimension du jeu-vidéo et de me surpasser chaque jour.</span>
+							<span class="desc">Salut je suis Guillaume. Je m’occupe de la réalisation du Gameplay dans le projet. Avec le groupe je réalise les mouvements, le hacking etc. Je n’avais  aucune expérience dans Unity et dans le C# avant cette année, ce projet me permet de découvrir une nouvelle dimension du jeu vidéo et de me surpasser chaque jour.</span>
 						</div>
 					</div>
 				</div>
