--- a/news1.html
+++ b/news1.html
@@ -63,13 +63,13 @@
 							Bonjour à tous,
 						</p>
 						<p>
-							Nous ouvrons aujourd'hui le site internet du projet T.H.I.S. . Notre jeu n'est pas encore disponible en téléchargement mais vous pouvez déjà télécharger le cahier des charges du projet ainsi que les deux premmiers rapports de soutenance qui vous donneront un premier aperçut du jeu.
+							Nous ouvrons aujourd'hui le site internet du projet T.H.I.S.. Notre jeu n'est pas encore disponible en téléchargement, mais vous pouvez déjà télécharger le cahier des charges du projet ainsi que les deux premmiers rapports de soutenance qui vous donneront un premier aperçut du jeu.
 						</p>
 						<p>
-							Dans les grandes lignes, T.H.I.S. est un jeu coopératif ou vous devrez vous frayez un chemin entre les robots et caméras de surveillances afin de récupérer différrents éléments qui vous permettront de finir le niveau.
+							Dans les grandes lignes, T.H.I.S. est un jeu coopératif où vous devrez vous frayer un chemin entre les robots et caméras de surveillances afin de récupérer différents éléments qui vous permettront de finir le niveau.
 						</p>
 						<p>
-							Nous vous avons laisser la possibilté de jouer tout seul en controlant les deux personnages ou avec un de vos amis. Attention à bien choisir votre coéquipier, dans T.H.I.S. chaque erreur est fatale !
+							Nous vous avons laissé la possibilité de jouer tout seul en contrôlant les deux personnages ou avec un de vos amis. Attention à bien choisir votre coéquipier, dans T.H.I.S. chaque erreur est fatale !
 						</p>
 						<span class="authorContainer">by <span class="author">Mr_Freezeex</span></span>
 					</div>
