--- a/news2.html
+++ b/news2.html
@@ -63,13 +63,13 @@
 							Bonjour à tous,
 						</p>
 						<p>
-							Notre groupe This is a team se prépare pour les dernières finitons du jeu T.H.I.S. . Nous vous laisserons télécharger le jeu le Jeudi 15 Juin 2017. 
+							Notre groupe This is a team se prépare pour les dernières finitons du jeu T.H.I.S.. Nous vous laisserons télécharger le jeu le jeudi 15 Juin 2017. 
 						</p>
 						<p>
-							Nous vous avons préparer de nombreuses améliorations tel que l'apparation d'un opérateur qui fera office de narrateur dans votre aventure et vous guidera dans celle-ci. Suivez bien les instruction de cet opérateur.
+							Nous vous avons préparé de nombreuses améliorations telles que l'apparation d'un opérateur qui fera office de narrateur dans votre aventure et vous guidera dans celle-ci. Suivez bien les instructions de cet opérateur.
 						</p>
 						<p>
-							Nous vous annonçons également l'arriver d'un manuel d'exploitation composé d'un manuel d'utilisation et d'un manuel d'installation. N'hésiter pas à le consulter une fois le jeu sortis ! 
+							Nous vous annonçons également l'arriver d'un manuel d'exploitation composé d'un manuel d'utilisation et d'un manuel d'installation. N'hésitez pas à le consulter une fois le jeu sortis ! 
 						</p>
 						<span class="authorContainer">by <span class="author">Mr_Freezeex</span></span>
 					</div>
